Proyecto Pair Programming/force-app/main/default/objects/UserUnit__c.object
<CustomObject>
    <fields>
        <fullName>Points__c</fullName>
        <label>Points</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Draft</fullName>
                </value>
                <value>
                    <fullName>Answered</fullName>
                </value>
                <value>
                    <fullName>Success</fullName>
                </value>
                <value>
                    <fullName>Fail</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Unit__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Unit</label>
        <referenceTo>Unit__c</referenceTo>
        <relationshipLabel>UserUnits</relationshipLabel>
        <relationshipName>UserUnits</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>UserModule__c</fullName>
        <label>UserModule</label>
        <referenceTo>UserModule__c</referenceTo>
        <relationshipLabel>UserUnits</relationshipLabel>
        <relationshipName>UserUnits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>UserUnit</label>
    <nameField>
        <label>UserUnit Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>UserUnits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>